Fixing spacing + add new style rules for scrolling + longer shadow

--- a/frontend/src/styles/PhotoDetailsModal.scss
+++ b/frontend/src/styles/PhotoDetailsModal.scss
@@ -1,10 +1,10 @@
 .photo-details-modal {
   background-color: white;
-  box-shadow: 0 0 0 50vmax rgba(0,0,0,.5);
-  position: absolute;
+  box-shadow: 0 0 0 1000vmax rgba(0,0,0,.5);
+  position: fixed;
   top: 55%;
   left: 50%;
-  transform: translate(-50%, -40%);
+  transform: translate(-50%, -60%);
   height: 80%;
   width: 55%;
   overflow-y: scroll;
